<resources>
    <string name="app_name">What if?</string>

    <string name="first_button">« first</string>
    <string name="prev_button">‹ prev</string>
    <string name="list_button" translatable="false">#1</string>
    <string name="next_button">next ›</string>
    <string name="last_button">last »</string>
    <string name="reading_article">Reading article</string>
    <string name="please_wait">Please wait</string>
    <string name="articles_list_name">Articles list</string>
    <string name="sort_action">Sort</string>
</resources>
